force-app/main/default/objects/FMT__c/FMT__c.object-meta.xml
<CustomObject>
    <label>FMT</label>
    <nameField>
        <label>FMT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FMTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>