force-app/main/default/objects/FMT__c/fields/Order_name__c.field-meta.xml
<CustomField>
    <fullName>Order_name__c</fullName>
    <label>Order name</label>
    <length>12</length>
    <type>Text</type>
</CustomField>